Update for testing data

--- a/model_testing/data_preprocessing.ipynb
+++ b/model_testing/data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "208c98cd",
    "metadata": {},
    "outputs": [
@@ -26,15 +26,13 @@
     }
    ],
    "source": [
-    "import kagglehub\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "import pandas as pd\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import math\n",
-    "import albumentations as A"
+    "import math"
    ]
   },
   {
@@ -138,61 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cf0c535d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def augment_data(output_folder: str, transform_func, data_frame: pd.DataFrame) -> None:\n",
-    "    \"\"\"\n",
-    "    Augment images with MEL = 1 to create a new balanced dataset.\n",
-    "\n",
-    "    output_folder (str): Path to the folder where augmented images and the new DataFrame will be saved.\n",
-    "    transform_func (Compose): albumentations transformation function.\n",
-    "    data_frame (pd.DataFrame): Original DataFrame containing image data.\n",
-    "    \"\"\"\n",
-    "    # Ensure the output folder exists\n",
-    "    if not os.path.exists(output_folder):\n",
-    "        os.makedirs(output_folder)\n",
-    "\n",
-    "    # Create a new DataFrame to store the balanced dataset\n",
-    "    balanced_data = []\n",
-    "\n",
-    "    for _, row in data_frame.iterrows():\n",
-    "        image_name = row[\"image\"]\n",
-    "        image_path = os.path.join(output_folder, f\"{image_name}.jpg\")\n",
-    "        image = cv2.imread(image_path)\n",
-    "\n",
-    "        if image is None:\n",
-    "            print(f\"Error: Could not load image {image_path}\")\n",
-    "            continue\n",
-    "\n",
-    "        # Add the original row to the balanced dataset\n",
-    "        balanced_data.append(row)\n",
-    "\n",
-    "        # If MEL == 1, augment the image and save 3 transformed copies\n",
-    "        if row[\"MEL\"] == 1:\n",
-    "            for i in range(1, 4):  # Create 3 augmented copies\n",
-    "                augmented = transform_func(image=image)\n",
-    "                transformed_image = augmented[\"image\"]\n",
-    "                augmented_name = f\"{image_name}_{i}.jpg\"\n",
-    "                augmented_path = os.path.join(output_folder, augmented_name)\n",
-    "                cv2.imwrite(augmented_path, transformed_image)\n",
-    "\n",
-    "                # Add the new row to the balanced dataset\n",
-    "                new_row = row.copy()\n",
-    "                new_row[\"image\"] = f\"{image_name}_{i}\"  # Update the image name\n",
-    "                balanced_data.append(new_row)\n",
-    "\n",
-    "    # Create a new DataFrame from the balanced data\n",
-    "    df_balanced = pd.DataFrame(balanced_data, columns=data_frame.columns)\n",
-    "\n",
-    "    # Save the balanced DataFrame to the output folder\n",
-    "    df_balanced_path = os.path.join(output_folder, \"ISIC_2019_Training_Balanced.csv\")\n",
-    "    df_balanced.to_csv(df_balanced_path, index=True)\n",
-    "\n",
-    "    print(f\"\\nAugmentation and balancing complete. Balanced DataFrame saved to {df_balanced_path}.\")\n",
-    "\n",
     "def resize_images(folder: str, target_size=(224, 224)):\n",
     "    \"\"\"\n",
     "    Resize all jpg images in a folder to the target size.\n",
@@ -278,18 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9115ea81",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = '/Users/nathanong/.cache/kagglehub/datasets/andrewmvd/isic-2019/versions/1'  # Update this path as needed\n",
-    "image_folder = os.path.join(base_path, 'ISIC_2019_Training_Input', 'ISIC_2019_Training_Input')\n",
-    "labels_path = os.path.join(base_path, 'ISIC_2019_Training_GroundTruth.csv')\n",
-    "output_folder = '../preprocessed_dataset'  # Update this path as needed\n",
+    "base_path = '/Users/nathanong/.cache/kagglehub/datasets/andrewmvd/isic-2019/versions/1'  # TODO: Update this path to test data\n",
+    "image_folder = os.path.join(base_path, 'ISIC_2019_Test_Input')\n",
+    "labels_path = os.path.join(base_path, 'ISIC_2019_Test_GroundTruth.csv')\n",
+    "output_folder = 'preprocessed_dataset'\n",
     "if not os.path.exists(output_folder):\n",
-    "    os.makedirs(output_folder)\n",
-    "balanced_csv_path = os.path.join(output_folder, 'ISIC_2019_Training_Balanced.csv')"
+    "    os.makedirs(output_folder)"
    ]
   },
   {
@@ -433,91 +380,6 @@
     "\n",
     "# === Melanoma vs. Non-Melanoma ===\n",
     "num_melanoma(df)  # Display the number of melanoma vs non-melanoma images"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89e57e87",
-   "metadata": {},
-   "source": [
-    "#### Data Augmentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "b38debea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Applying data augmentation to balance the dataset...\n",
-      "\n",
-      "Augmentation and balancing complete. Balanced DataFrame saved to ../preprocessed_dataset/ISIC_2019_Training_Balanced.csv.\n"
-     ]
-    }
-   ],
-   "source": [
-    "transform = A.Compose([\n",
-    "    A.Rotate(limit=30, p=0.5), # limit 30 degrees\n",
-    "    A.HorizontalFlip(p=0.5), \n",
-    "    A.RandomBrightnessContrast(p=0.2)\n",
-    "])\n",
-    "print(\"\\nApplying data augmentation to balance the dataset...\")\n",
-    "augment_data(output_folder, transform, df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7986e94d",
-   "metadata": {},
-   "source": [
-    "#### Preview Augmented Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "efe33066",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated CSV saved to ../preprocessed_dataset/ISIC_2019_Training_Balanced.csv\n",
-      "\n",
-      "Balanced dataset preview:\n",
-      "            image  MEL\n",
-      "0    ISIC_0000000  0.0\n",
-      "1    ISIC_0000001  0.0\n",
-      "2    ISIC_0000002  1.0\n",
-      "3  ISIC_0000002_1  1.0\n",
-      "4  ISIC_0000002_2  1.0\n",
-      "\n",
-      "Melanoma images: 18088\n",
-      "Non-Melanoma images: 20809\n",
-      "\n",
-      "MEL column class distribution (%):\n",
-      "MEL\n",
-      "0.0    53.497699\n",
-      "1.0    46.502301\n",
-      "Name: proportion, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_balanced = pd.read_csv(balanced_csv_path)\n",
-    "df_balanced = df_balanced[['image', 'MEL']]\n",
-    "df_balanced.to_csv(balanced_csv_path, index=True)\n",
-    "print(f\"Updated CSV saved to {balanced_csv_path}\")\n",
-    "\n",
-    "print(\"\\nBalanced dataset preview:\")\n",
-    "print(df_balanced.head())\n",
-    "num_melanoma(df_balanced)  # Display the number of melanoma vs non-melanoma images"
    ]
   },
   {
