--- a/model_testing/nathan_audrey.ipynb
+++ b/model_testing/nathan_audrey.ipynb
@@ -16,10 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "from tensorflow.keras.models import load_model\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -67,13 +68,14 @@
     "    dataset = dataset.shuffle(buffer_size=1000).batch(batch_size).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
     "    return dataset\n",
     "\n",
-    "csv_path = '../preprocessed_dataset/ISIC_2019_Training_Balanced.csv'\n",
-    "image_folder = '../preprocessed_dataset'\n",
+    "base_path = '/Users/nathanong/.cache/kagglehub/datasets/andrewmvd/isic-2019/versions/1'  # TODO: Update this path to test data\n",
+    "labels_path = os.path.join(base_path, 'ISIC_2019_Test_GroundTruth.csv')\n",
+    "image_folder = 'preprocessed_dataset'\n",
     "\n",
     "# Load the CSV file\n",
-    "df = pd.read_csv(csv_path)\n",
+    "df = pd.read_csv(labels_path)\n",
     "df['image'] = df['image'] + '.jpg'\n",
-    "print(f\"Loaded {len(df)} images from {csv_path}\")\n",
+    "print(f\"Loaded {len(df)} images from {labels_path}\")\n",
     "\n",
     "# Create TensorFlow dataset\n",
     "dataset = create_tf_dataset(df, image_folder)\n",
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
