--- a/model_final/priyansh_rushil.ipynb
+++ b/model_final/priyansh_rushil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c952912e",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9a8d2a30",
    "metadata": {},
    "outputs": [],
@@ -72,43 +72,15 @@
     "\n",
     "    # Median Blur\n",
     "    md = cv2.medianBlur(dst3, 5)\n",
-    "    return md\n",
-    "\n",
-    "# Rest of the models\n",
-    "def process_uncolored_image(img_path):\n",
-    "    md = process_image(img_path)\n",
     "    ah = cv2.cvtColor(md, cv2.COLOR_BGR2GRAY)\n",
     "    ah_eq = cv2.equalizeHist(ah)\n",
     "\n",
-    "    return ah_eq"
+    "    return ah_eq\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "aa2b88e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "preprocess_funcs = {}\n",
-    "for path in model_paths:\n",
-    "    name = os.path.basename(path)\n",
-    "    if re.search(r\"(7|8|m(e)?lanoma_model)\", name, re.IGNORECASE):\n",
-    "        # Color models: apply process_image on uint8, normalize\n",
-    "        def make_color_pre():\n",
-    "            return lambda img: (process_image(img))\n",
-    "        preprocess_funcs[name] = make_color_pre()\n",
-    "    else:\n",
-    "        # Grayscale models: apply process_uncolored_image, normalize and expand dims\n",
-    "        def make_gray_pre():\n",
-    "            return lambda img: process_uncolored_image(img)\n",
-    "        preprocess_funcs[name] = make_gray_pre()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "8ae58eb5",
    "metadata": {},
    "outputs": [
@@ -519,54 +491,48 @@
     "\n",
     "results = {}\n",
     "batch_size = 32\n",
-    "for model_path in model_paths:\n",
-    "    model_name = os.path.basename(model_path)\n",
-    "    print(f\"=== Evaluating {model_name} ===\")\n",
-    "    model = load_model(model_path)\n",
-    "    preprocess = preprocess_funcs.get(model_name, lambda x: x)\n",
+    "model_path = \"melenoma_model.h5\"  # Change to the model you want to evaluate\n",
+    "model = load_model(model_path)\n",
+    "all_probs = []\n",
+    "all_preds = []\n",
+    "for i in range(0, len(gt_df), batch_size):\n",
+    "    batch = gt_df.iloc[i:i+batch_size]\n",
+    "    imgs = []\n",
+    "    for fp in batch['filepath']:\n",
+    "        img = process_image(fp)\n",
+    "        # Resize to model input size (assuming 224x224 for this example)\n",
+    "        img = cv2.resize(img, (224, 224))\n",
+    "        img = img.astype(np.float32) / 255.0\n",
+    "        imgs.append(img)\n",
+    "    X_batch = np.stack(imgs)\n",
+    "    probs = model.predict(X_batch, verbose=0)\n",
+    "    preds = (probs > 0.5).astype(int)\n",
+    "    all_probs.extend(probs.flatten())\n",
+    "    all_preds.extend(preds.flatten())\n",
     "\n",
-    "    all_probs = []\n",
-    "    all_preds = []\n",
-    "    # Lazy load and preprocess in batches\n",
-    "    for i in range(0, len(gt_df), batch_size):\n",
-    "        batch = gt_df.iloc[i:i+batch_size]\n",
-    "        imgs = []\n",
-    "        for fp in batch['filepath']:\n",
-    "            img = preprocess(fp)\n",
-    "            # Resize to model input size (assuming 224x224 for this example)\n",
-    "            img = cv2.resize(img, (224, 224))\n",
-    "            img = img.astype(np.float32) / 255.0\n",
-    "            imgs.append(img)\n",
-    "        X_batch = np.stack(imgs)\n",
-    "        probs = model.predict(X_batch, verbose=0)\n",
-    "        preds = (probs > 0.5).astype(int)\n",
-    "        all_probs.extend(probs.flatten())\n",
-    "        all_preds.extend(preds.flatten())\n",
+    "y_pred_proba = np.array(all_probs)\n",
+    "y_pred = np.array(all_preds)\n",
     "\n",
-    "    y_pred_proba = np.array(all_probs)\n",
-    "    y_pred = np.array(all_preds)\n",
+    "# Metrics\n",
+    "auc_score = roc_auc_score(y_true, y_pred_proba)\n",
+    "cm = confusion_matrix(y_true, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(cm)\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_true, y_pred, target_names=['Non-Melanoma', 'Melanoma']))\n",
     "\n",
-    "    # Metrics\n",
-    "    auc_score = roc_auc_score(y_true, y_pred_proba)\n",
-    "    cm = confusion_matrix(y_true, y_pred)\n",
-    "    print(\"Confusion Matrix:\")\n",
-    "    print(cm)\n",
-    "    print(\"Classification Report:\")\n",
-    "    print(classification_report(y_true, y_pred, target_names=['Non-Melanoma', 'Melanoma']))\n",
+    "# ROC Curve\n",
+    "fpr, tpr, _ = roc_curve(y_true, y_pred_proba)\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "plt.plot(fpr, tpr, label=f'AUC = {auc_score:.2f}')\n",
+    "plt.plot([0, 1], [0, 1], 'k--')\n",
+    "plt.title(f'ROC Curve: {model_path}')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
     "\n",
-    "    # ROC Curve\n",
-    "    fpr, tpr, _ = roc_curve(y_true, y_pred_proba)\n",
-    "    plt.figure(figsize=(6, 6))\n",
-    "    plt.plot(fpr, tpr, label=f'AUC = {auc_score:.2f}')\n",
-    "    plt.plot([0, 1], [0, 1], 'k--')\n",
-    "    plt.title(f'ROC Curve: {model_name}')\n",
-    "    plt.xlabel('False Positive Rate')\n",
-    "    plt.ylabel('True Positive Rate')\n",
-    "    plt.legend(loc='lower right')\n",
-    "    plt.grid(True)\n",
-    "    plt.show()\n",
-    "\n",
-    "    results[model_name] = {'auc': auc_score, 'confusion_matrix': cm.tolist(), 'fpr': fpr.tolist(), 'tpr': tpr.tolist()}\n",
     "\n",
     "# Identify best model by AUC\n",
     "best_model = max(results, key=lambda m: results[m]['auc'])\n",
