SMOTE-Tomek oversampling

--- a/backend/data_preprocessing_training/audrey-nathan/dscc_net_preprocessing.ipynb
+++ b/backend/data_preprocessing_training/audrey-nathan/dscc_net_preprocessing.ipynb
@@ -146,8 +146,10 @@
     "        try:\n",
     "            if file_name.endswith(\".jpg\"):\n",
     "                print(f\"Processing {file_name}...\")\n",
-    "                # Call the filter function for each image\n",
-    "                filter_image(input_folder, output_folder, file_name)\n",
+    "                if not os.path.exists(os.path.join(output_folder, file_name)):\n",
+    "                    filter_image(input_folder, output_folder, file_name)\n",
+    "                else:\n",
+    "                    print(f\"{file_name} already exists in {output_folder}. Skipping.\")\n",
     "        except Exception as e:\n",
     "            print(f\"Error processing image {file_name}: {e}\")\n",
     "\n",
@@ -198,26 +200,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def upsample_melanoma_images(data_frame: pd.DataFrame, image_folder: str, output_folder: str, output_csv_path: str, image_size=(224, 224)) -> None:\n",
+    "def oversample_melanoma_images(output_folder: str, data_frame: pd.DataFrame, output_csv_path: str, image_size=(224, 224)) -> None:\n",
     "    \"\"\"\n",
-    "    Upsample melanoma images using SMOTE-Tomek on the actual image data.\n",
+    "    Oversample melanoma images using SMOTE-Tomek.\n",
     "\n",
-    "    data_frame: DataFrame containing image file names and labels.\n",
-    "    image_folder: Path to the folder containing images.\n",
-    "    output_folder: Path to the folder where upsampled images will be saved.\n",
+    "    output_folder: Path to the folder with filtered images and where upsampled images will be saved.\n",
+    "    data_frame: DataFrame containing image file names, melanoma (0 or 1), and paths.\n",
     "    output_csv_path: Path to save the updated CSV file.\n",
-    "    image_size: Tuple specifying the target size (width, height) for resizing images.\n",
+    "    image_size: Target size (width, height) for resized images.\n",
     "    \"\"\"\n",
     "    # Load melanoma images and their labels\n",
-    "    melanoma_df = data_frame[data_frame['MEL'] == 1]\n",
-    "    non_melanoma_df = data_frame[data_frame['MEL'] == 0]\n",
+    "    melanoma_df = data_frame[data_frame['melanoma'] == 1]\n",
+    "    non_melanoma_df = data_frame[data_frame['melanoma'] == 0]\n",
     "\n",
     "    melanoma_images = []\n",
     "    melanoma_labels = []\n",
     "\n",
-    "    for image_file in melanoma_df['image']:\n",
-    "        image_path = os.path.join(image_folder, image_file)\n",
-    "        image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)  # Load as grayscale\n",
+    "    for image_path in melanoma_df['path']:\n",
+    "        image = cv2.imread(image_path, cv2.IMREAD_COLOR)  # Load as RGB\n",
     "        if image is not None:\n",
     "            resized_image = cv2.resize(image, image_size)  # Resize to target size\n",
     "            melanoma_images.append(resized_image.flatten())  # Flatten the image\n",
@@ -226,9 +226,8 @@
     "    non_melanoma_images = []\n",
     "    non_melanoma_labels = []\n",
     "\n",
-    "    for image_file in non_melanoma_df['image']:\n",
-    "        image_path = os.path.join(image_folder, image_file)\n",
-    "        image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)  # Load as grayscale\n",
+    "    for image_path in non_melanoma_df['path']:\n",
+    "        image = cv2.imread(image_path, cv2.IMREAD_COLOR)  # Load as RGB\n",
     "        if image is not None:\n",
     "            resized_image = cv2.resize(image, image_size)  # Resize to target size\n",
     "            non_melanoma_images.append(resized_image.flatten())  # Flatten the image\n",
@@ -242,20 +241,18 @@
     "    smote_tomek = SMOTETomek(random_state=42)\n",
     "    X_resampled, y_resampled = smote_tomek.fit_resample(X, y)\n",
     "\n",
-    "    # Save the synthetic images\n",
-    "    if not os.path.exists(output_folder):\n",
-    "        os.makedirs(output_folder)\n",
-    "\n",
-    "    synthetic_data = []\n",
+    "    synthetic_data = {\"image_name\": [], \"melanoma\": [], \"path\": []}\n",
     "    for i, (image_data, label) in enumerate(zip(X_resampled, y_resampled)):\n",
-    "        reshaped_image = image_data.reshape(image_size)  # Reshape to original size\n",
+    "        reshaped_image = image_data.reshape(image_size[0], image_size[1], 3)  # Reshape to original size\n",
     "        output_image_path = os.path.join(output_folder, f\"synthetic_{i}.jpg\")\n",
     "        cv2.imwrite(output_image_path, reshaped_image)  # Save the image\n",
-    "        synthetic_data.append({\"image\": f\"synthetic_{i}.jpg\", \"MEL\": label})\n",
+    "        synthetic_data[\"image_name\"].append(f\"synthetic_{i}\")\n",
+    "        synthetic_data[\"melanoma\"].append(label)\n",
+    "        synthetic_data[\"path\"].append(output_image_path)\n",
     "\n",
     "    # Save the updated DataFrame\n",
     "    synthetic_df = pd.DataFrame(synthetic_data)\n",
-    "    synthetic_df.to_csv(output_csv_path, index=False)\n",
+    "    synthetic_df.to_csv(output_csv_path, mode='a', header=False)\n",
     "    print(f\"Updated CSV saved to {output_csv_path}\")"
    ]
   },
